Correciones en las opciones de comprobación de conectividad