@@ -4,6 +4,8 @@ import java.io.IOException;
 import java.io.PrintWriter;
 import java.net.HttpURLConnection;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLConnection;
 
@@ -35,6 +37,7 @@ import es.inteco.common.Constants;
 import es.inteco.common.IntavConstants;
 import es.inteco.common.logging.Logger;
 import es.inteco.common.properties.PropertiesManager;
+import es.inteco.rastreador2.utils.CrawlerUtils;
 
 /**
  * Action para mostrar la conectividad con los sistemas externos como SIM.
@@ -76,7 +79,10 @@ public class ConectividadAction extends Action {
 					errors.add("urlVacia", new ActionMessage("conectividad.url.vacia.error"));
 					saveErrors(request, errors);
 				} else {
-					return checkUrl(url, request, response);
+
+					String fixedUrl = new String(url.getBytes("ISO-8859-1"));
+
+					return checkUrl(fixedUrl, request, response);
 				}
 			} else if ("checksim".equals(action)) {
 				String email = request.getParameter("email");
@@ -190,11 +196,13 @@ public class ConectividadAction extends Action {
 		String urlError = "";
 
 		try {
-			URL url = new URL(urlAdress);
+
+			URL url = new URI(encodeUrl(urlAdress)).toURL();
 
 			HttpURLConnection connection = (HttpURLConnection) url.openConnection();
 
 			connection.setInstanceFollowRedirects(true);
+
 			connection.setConnectTimeout(Integer.parseInt(pmgr.getValue(IntavConstants.INTAV_PROPERTIES, "validator.timeout")));
 			connection.setReadTimeout(Integer.parseInt(pmgr.getValue(IntavConstants.INTAV_PROPERTIES, "validator.timeout")));
 			connection.addRequestProperty("Accept-Language", pmgr.getValue("crawler.core.properties", "method.accept.language.header"));
@@ -215,6 +223,8 @@ public class ConectividadAction extends Action {
 			urlError = "URL mal formada";
 		} catch (IOException e1) {
 			urlError = "Error de conexión";
+		} catch (URISyntaxException e) {
+			urlError = "URL mal formada";
 		}
 
 		response.setContentType("text/json");
@@ -295,6 +305,19 @@ public class ConectividadAction extends Action {
 		public void setError(String error) {
 			this.error = error;
 		}
+
+	}
+
+	/**
+	 * Codifica la URL para eliminar caracteres acentuados, espacios...
+	 * 
+	 * @param url URL original
+	 * @return Resultado codificado
+	 */
+	private String encodeUrl(String url) {
+
+		return url.replaceAll(" ", "%20").replaceAll("Á", "%E1").replaceAll("É", "%C9").replaceAll("Í", "%CD").replaceAll("Ó", "%D3").replaceAll("Ú", "%DA").replaceAll("á", "%E1")
+				.replaceAll("é", "%E9").replaceAll("í", "%ED").replaceAll("ó", "%F3").replaceAll("ú", "%FA").replaceAll("Ñ", "%D1").replaceAll("ñ", "%F1").replaceAll("&amp;", "&");
 
 	}
 }
